--- a/views/home.pug
+++ b/views/home.pug
@@ -1,4 +1,5 @@
-extends ./layout/layout
+extends ./layout/index
 
 block content
-    p Welcome mate!
+    h1 Welcome to the init of your dreams!
+    img(src="/img/cupon.jpg")
