Added new pages for travel and testimonies

--- a/views/layout/header.pug
+++ b/views/layout/header.pug
@@ -11,4 +11,4 @@ header
                     .nav.mt-5.mt-md-0.nav.justify-content-center.justify-content-md-end
                         a.nav-link(href="/us") About us
                         a.nav-link(href="travel") Travel
-                        a.nav-link(href="testimony") Testimonies    
+                        a.nav-link(href="testimonies") Testimonies    
