--- a/views/us.pug
+++ b/views/us.pug
@@ -1,4 +1,7 @@
 extends ./layout/index
 
 block content
-    p About us
+    main.container.mt-5 
+        .row 
+            h1=initialHeader
+                img(src="/img/cupon.jpg")
