--- a/views/layout/footer.pug
+++ b/views/layout/footer.pug
@@ -1,1 +1,10 @@
-footer from footer
+footer.container.py-5
+    .row
+        .col-md-6 
+            nav.nav.footer.justify-content-center.justify-content-md-start 
+                a.nav-link(href="/us") About us
+                a.nav-link(href="travel") Travel
+                a.nav-link(href="testimonies") Testimonies  
+        .col 
+            p.copyright.text-center.text-md-right All rights reserved 
+            span= actualYear      
