--- a/views/travel.pug
+++ b/views/travel.pug
@@ -1,7 +1,35 @@
 extends ./layout/index
 
 block content
+    h1(class="mt-5 text-center") #{nameSite}
     main.container.mt-5 
         .row 
-            h1=initialHeader
-                img(src="/img/cupon.jpg")
+            each trip in findAllTrips
+                .col-md-6.col-lg-4.mb-4 
+                    .card 
+                        img.card-img-top(src=`img/destinos_${trip.image}.jpg`)
+                        .card-body 
+                            h2= trip.title
+                            p
+                                svg.icon.icon-tabler.icon-tabler-calendar-pin(xmlns='http://www.w3.org/2000/svg' width='44' height='44' viewbox='0 0 24 24' stroke-width='1.5' stroke='#2c3e50' fill='none' stroke-linecap='round' stroke-linejoin='round')
+                                    path(stroke='none' d='M0 0h24v24H0z' fill='none')
+                                    path(d='M12.5 21h-6.5a2 2 0 0 1 -2 -2v-12a2 2 0 0 1 2 -2h12a2 2 0 0 1 2 2v4')
+                                    path(d='M16 3v4')
+                                    path(d='M21.121 20.121a3 3 0 1 0 -4.242 0c.418 .419 1.125 1.045 2.121 1.879c1.051 -.89 1.759 -1.516 2.121 -1.879z')
+                                    path(d='M19 18v.01')
+                                    path(d='M8 3v4')
+                                    path(d='M4 11h16')
+                                | Every year from #{trip.date_init} to #{trip.date_final}
+                            p   
+                                svg.icon.icon-tabler.icon-tabler-users-group(xmlns='http://www.w3.org/2000/svg' width='44' height='44' viewbox='0 0 24 24' stroke-width='1.5' stroke='#2c3e50' fill='none' stroke-linecap='round' stroke-linejoin='round')
+                                    path(stroke='none' d='M0 0h24v24H0z' fill='none')
+                                    path(d='M10 13a2 2 0 1 0 4 0a2 2 0 0 0 -4 0')
+                                    path(d='M8 21v-1a2 2 0 0 1 2 -2h4a2 2 0 0 1 2 2v1')
+                                    path(d='M15 5a2 2 0 1 0 4 0a2 2 0 0 0 -4 0')
+                                    path(d='M17 10h2a2 2 0 0 1 2 2v1')
+                                    path(d='M5 5a2 2 0 1 0 4 0a2 2 0 0 0 -4 0')
+                                    path(d='M3 13v-1a2 2 0 0 1 2 -2h2')
+                                | Available tickets #{trip.available}
+
+                            p= trip.description.substr(0,100) + "..."    
+                            a(href=`trips/${trip.slug}`, class="btn btn-success btn-block") More Info
