--- a/views/layout/header.pug
+++ b/views/layout/header.pug
@@ -10,5 +10,5 @@ header
                 .col-md-8
                     .nav.mt-5.mt-md-0.nav.justify-content-center.justify-content-md-end
                         a.nav-link(href="/us") About us
-                        a.nav-link(href="travel") Travel
-                        a.nav-link(href="testimonies") Testimonies    
+                        a.nav-link(href="/travel") Travel
+                        a.nav-link(href="/reviews") Reviews    
