--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,7 +8,7 @@ body {
 }
 h1, h2, h3 {
     font-family: 'Staatliches', cursive;
-    color: #15B9D5;
+    color: #4f9bc7;
 }
 h1 {
     font-size: 3.4rem;
@@ -79,7 +79,7 @@ p {
     line-height: 2;
 }
 .navigation {
-    background-color: #15B9D5;
+    background-color: #212266;
 }
 header .nav a {
     font-family: 'Staatliches', cursive;
