--- a/views/reviews.pug
+++ b/views/reviews.pug
@@ -2,21 +2,40 @@ extends ./layout/index
 
 block content
     main.container.mt-5 
-        h1.text-center.mt-5 #{initialHeader}
-        .row        
-            h2.d-block.w-100.text-center Add a review
+        h4.text-center.mt-5 #{initialHeader}
+
+
+        h1.text-center Read about the experience of our clients
+        .row.reviews    
+            each review in reviews
+                .col-md-6.col-lg-4.mb-4 
+                    .card 
+                        .card-body 
+                            blockquote.blockquote 
+                            p.mb-0 
+                                | #{review.review} 
+                            footer.blockquote-footer 
+                                | #{review.name} 
+
+        .row
+            .col-md-12        
+                h2.d-block.w-100.text-center Add a review
+
+                if(errors)
+                    each error in errors
+                        .alert.col.alert-danger.text-center=error.message
 
             .row.justify-content-center.col
                 .col-md-8 
                     form(action="/reviews" method="POST")
                         .form-group 
                             label(for="name") Name 
-                            input#name(type="text", placeholder="Name", name="name", class="form-control")
+                            input#name(type="text", value=name placeholder="Name", name="name", class="form-control")
                         .form-group 
                             label(for="email") Email 
-                            input#email(type="email", placeholder="Email", name="email", class="form-control")
+                            input#email(type="email", value=email placeholder="Email", name="email", class="form-control")
                         .form-group 
                             label(for="review") Review 
-                            textarea#review(class="form-control", placeholder="Review", name="review", rows="3")
+                            textarea#review(class="form-control", value=review placeholder="Review", name="review", rows="3")
                         
                         input.btn.btn-success.btn-block(type="submit")
