--- a/views/home.pug
+++ b/views/home.pug
@@ -14,3 +14,16 @@ block content
             .div-center.text-center
                 p Start a new adventure and discover destinations without worring about the bookings, things to do and experiences to meet in the journey. Just make a click and enjoy an amazing life episode.
         include ./layout/travelBlock
+    .discount 
+        .container 
+            .row 
+                .col-md-6 
+                    .content 
+                        h3 5% Discount 
+                        p.title Trip to Canada 
+                        p.date Sept 19th 2023 - Sept 28 2023
+                        p.price $2500
+    .container 
+        h2.mt-5.text-center Reviews
+    .d-flex.justify-content-center
+        include ./layout/reviewBlock
