--- a/views/layout/footer.pug
+++ b/views/layout/footer.pug
@@ -6,5 +6,4 @@ footer.container.py-5
                 a.nav-link(href="travel") Travel
                 a.nav-link(href="testimonies") Testimonies  
         .col 
-            p.copyright.text-center.text-md-right All rights reserved 
-            span= actualYear      
+            p.copyright.text-center.text-md-right All rights reserved | #{actualYear}      
